--- a/poc-unity-tracer-bullet/poc-unity-tracer-bullet.csproj
+++ b/poc-unity-tracer-bullet/poc-unity-tracer-bullet.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -55,8 +55,8 @@
     <Compile Include="Messages\Message.cs" />
     <Compile Include="Messages\RealMessage.cs" />
     <Compile Include="Messages\TracerBulletMessage.cs" />
-    <Compile Include="Metrics\DataDogMetrics.cs" />
-    <Compile Include="Metrics\DontPublishMetrics.cs" />
+    <Compile Include="Metrics\MetricsPublisher.cs" />
+    <Compile Include="Metrics\NoopPublisher.cs" />
     <Compile Include="Metrics\IPublishMetrics.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
